# aiogram3-triggers

./: .gitignore  README.md  example_bot.py  setup.cfg
aiogram3_triggers/: __init__.py  triggers.py
src/aiogram3_triggers/: __init__.py  triggers.py
