[metadata]
name = aiogram3-triggers
version = 0.0.3
author = Zcxw
author_email = zcxw.code@hotmail.com
description = Aiogram3 Triggers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zcxw-code/aiogram3-triggers
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src